fix resize overflow of user register

--- a/styles/user/user_register.css
+++ b/styles/user/user_register.css
@@ -33,3 +33,7 @@
     width: 50%;
     margin-right: 10px;
 }
+
+.right-field > input, textarea{
+    max-width:100%;
+}
